syntax = "proto3";

package calculator;

message AddRequest {
    int32 a = 1;
    int32 b = 2;
    int32 c = 3;
}

message AddResponse {
    int32 results = 1;
    string message = 2;
}

message MultipleRequest {
    int32 a = 1;
    int32 b = 2;
}

message CommonResponse {
    int32 results = 1;
    string message = 2;
}

message FibRequest {
    int32 number = 1;
}

service CalculatorService {
    rpc Add(AddRequest) returns(CommonResponse);
    rpc Multiple(MultipleRequest) returns(CommonResponse);
    rpc Fib(FibRequest) returns(CommonResponse);
}
